packages/native/vendor/zireael/include/zr/zr_engine.h

/* Opaque engine handle (owned and managed by the engine API). */
typedef struct zr_engine_t zr_engine_t;
/*
  Copy a metrics snapshot into caller storage.

  Note:
    - Uses prefix-copy semantics via zr_metrics_t.struct_size.
*/
zr_result_t engine_get_metrics(zr_engine_t* e, zr_metrics_t* out_metrics);
/* Return backend capability snapshot used by runtime output decisions. */
zr_result_t engine_get_caps(zr_engine_t* e, zr_terminal_caps_t* out_caps);
/*
  Apply runtime config updates.

  Contract:
    - Validates cfg.
    - Uses no-partial-effects resource swap semantics.
    - Platform sub-config changes are not supported at runtime.
*/
zr_result_t engine_set_config(zr_engine_t* e, const zr_engine_runtime_config_t* cfg);
/*
  Debug trace API.

  Why: Allows wrappers/tooling to capture and inspect bounded diagnostic
  records without introducing per-frame heap churn.
*/

/*
  Enable debug tracing with the provided configuration.

  Behavior:
    - Re-enabling replaces existing trace storage and resets prior records.
    - If config is NULL, defaults are used.
*/
zr_result_t engine_debug_enable(zr_engine_t* e, const zr_debug_config_t* config);
/* Disable tracing and free trace storage. Safe to call when already disabled. */
void engine_debug_disable(zr_engine_t* e);
/*
  Query debug record headers.

  Args:
    - query: filter criteria.
    - out_headers/out_headers_cap: optional output array for matched headers.
    - out_result: required query summary output.

  Notes:
    - Count-only queries are possible with out_headers == NULL.
*/
zr_result_t engine_debug_query(zr_engine_t* e, const zr_debug_query_t* query, zr_debug_record_header_t* out_headers,
                               uint32_t out_headers_cap, zr_debug_query_result_t* out_result);
/*
  Fetch payload bytes for a record by record_id.

  Returns:
    - ZR_OK and writes payload when found and capacity is sufficient.
    - ZR_ERR_LIMIT when record is not found or out_cap is insufficient.
*/
zr_result_t engine_debug_get_payload(zr_engine_t* e, uint64_t record_id, void* out_payload, uint32_t out_cap,
                                     uint32_t* out_size);
/* Return aggregate trace counters/health statistics. */
zr_result_t engine_debug_get_stats(zr_engine_t* e, zr_debug_stats_t* out_stats);
/*
  Export all trace records as a contiguous sequence of (header,payload) items.

  Returns:
    - bytes written (>= 0), or negative error code.
    - 0 when tracing is disabled or currently empty.
*/
int32_t engine_debug_export(zr_engine_t* e, uint8_t* out_buf, size_t out_cap);
/* Clear trace records while keeping tracing enabled. */
void engine_debug_reset(zr_engine_t* e);