packages/native/vendor/zireael/include/zr/zr_debug.h

/*
  Debug record header (common to all record types).

  Why: Provides a uniform prefix for indexing, filtering, and correlation.
*/
typedef struct zr_debug_record_header_t {
  uint64_t record_id;    /* Monotonic record counter */
  uint64_t timestamp_us; /* Microseconds since engine_debug_enable() */
  uint64_t frame_id;     /* Associated frame (0 if not applicable) */
  uint32_t category;     /* zr_debug_category_t */
  uint32_t severity;     /* zr_debug_severity_t */
  uint32_t code;         /* Subsystem-specific code */
  uint32_t payload_size; /* Size of payload following header */
} zr_debug_record_header_t;
/*
  Debug configuration.

  Why: Controls which categories and severity levels are captured.
*/
typedef struct zr_debug_config_t {
  uint32_t enabled;                /* Master enable flag (0/1) */
  uint32_t ring_capacity;          /* Max records in ring buffer (0 = default) */
  uint32_t min_severity;           /* Minimum severity to capture */
  uint32_t category_mask;          /* Bitmask of enabled categories */
  uint32_t capture_raw_events;     /* Capture raw event bytes (0/1) */
  uint32_t capture_drawlist_bytes; /* Capture drawlist bytes (0/1) */
  uint32_t _pad0;
  uint32_t _pad1;
} zr_debug_config_t;
/*
  Debug query filter.

  Why: Allows callers to filter records when querying the trace buffer.
*/
typedef struct zr_debug_query_t {
  uint64_t min_record_id; /* Start at this record ID (0 = oldest) */
  uint64_t max_record_id; /* End at this record ID (0 = newest) */
  uint64_t min_frame_id;  /* Filter by frame range (0 = no filter) */
  uint64_t max_frame_id;
  uint32_t category_mask; /* Bitmask of categories to include */
  uint32_t min_severity;  /* Minimum severity to include */
  uint32_t max_records;   /* Maximum records to return (0 = no limit) */
  uint32_t _pad0;
} zr_debug_query_t;
/*
  Debug query result.

  Why: Returns query statistics along with record count.
*/
typedef struct zr_debug_query_result_t {
  uint32_t records_returned;  /* Number of records copied */
  uint32_t records_available; /* Total matching records in buffer */
  uint64_t oldest_record_id;  /* Oldest record ID still in buffer */
  uint64_t newest_record_id;  /* Newest record ID in buffer */
  uint32_t records_dropped;   /* Total records overwritten since enable/reset (best-effort; may clamp) */
  uint32_t _pad0;
} zr_debug_query_result_t;
/*
  Debug statistics snapshot.

  Why: Provides aggregate counts for monitoring without querying individual records.
*/
typedef struct zr_debug_stats_t {
  uint64_t total_records;      /* Total records ever written */
  uint64_t total_dropped;      /* Records dropped due to ring overflow */
  uint32_t error_count;        /* Total error records */
  uint32_t warn_count;         /* Total warning records */
  uint32_t current_ring_usage; /* Records currently in ring */
  uint32_t ring_capacity;      /* Ring buffer capacity */
} zr_debug_stats_t;