packages/native/src/ffi.rs


    pub(crate) fn engine_get_metrics(
        e: *mut zr_engine_t,
        out_metrics: *mut zr_metrics_t,
    ) -> ZrResultT;
    pub(crate) fn engine_get_caps(
        e: *mut zr_engine_t,
        out_caps: *mut zr_terminal_caps_t,
    ) -> ZrResultT;
    pub(crate) fn engine_set_config(
        e: *mut zr_engine_t,
        cfg: *const zr_engine_runtime_config_t,
    ) -> ZrResultT;

    pub(crate) fn engine_debug_enable(
        e: *mut zr_engine_t,
        config: *const zr_debug_config_t,
    ) -> ZrResultT;
    pub(crate) fn engine_debug_disable(e: *mut zr_engine_t);
    pub(crate) fn engine_debug_query(
        e: *mut zr_engine_t,
        query: *const zr_debug_query_t,
        out_headers: *mut zr_debug_record_header_t,
        out_headers_cap: u32,
        out_result: *mut zr_debug_query_result_t,
    ) -> ZrResultT;
    pub(crate) fn engine_debug_get_payload(
        e: *mut zr_engine_t,
        record_id: u64,
        out_payload: *mut u8,
        out_cap: u32,
        out_size: *mut u32,
    ) -> ZrResultT;
    pub(crate) fn engine_debug_get_stats(
        e: *mut zr_engine_t,
        out_stats: *mut zr_debug_stats_t,
    ) -> ZrResultT;
    pub(crate) fn engine_debug_export(e: *mut zr_engine_t, out_buf: *mut u8, out_cap: usize)
        -> i32;
    pub(crate) fn engine_debug_reset(e: *mut zr_engine_t);
}
